# Day13_Group06_E402

./: .env.example  .gitignore  AGENTS.md  Makefile  pyproject.toml  tasks.md
app/: agent.py  audit.py  cost_optimizer.py  logging_config.py  main.py  metrics.py  middleware.py  mock_llm.py  mock_rag.py  pii.py  tracing.py
config/: alert_rules.yaml  dashboard.json  slo.yaml
docs/: alerts.md  blueprint-template.md  dashboard-spec.md  grading-evidence.md
docs/individual-reports/: VoThienPhu.md  individual-report-dao-hong-son.md  individual-report-nguyen-anh-quan.md  individual-report-pham-minh-khang.md  individual-report-phan-duong-dinh.md
report/: Dao_Hong_Son.md  Pham_Minh_Khang.md  Phan_Duong_Dinh.md  Vo_Thien_Phu.md  group_report.md
scripts/: inject_incident.py  load_test.py  run_full_validation.py  test_langfuse_direct.py  validate_logs.py
